added basic swagger docs
